--- a/AutoXX/AutoXX/AutoXX.csproj
+++ b/AutoXX/AutoXX/AutoXX.csproj
@@ -67,6 +67,8 @@
     <Compile Include="AnaylyzeApi.cs" />
     <Compile Include="CoinAnalyze.cs" />
     <Compile Include="CoinDao.cs" />
+    <Compile Include="Coin\DTA.cs" />
+    <Compile Include="Coin\SMT.cs" />
     <Compile Include="Coin\XEM.cs" />
     <Compile Include="DataType.cs" />
     <Compile Include="Program.cs" />
