--- a/AutoXX/AutoXX/AutoXX.csproj
+++ b/AutoXX/AutoXX/AutoXX.csproj
@@ -67,8 +67,11 @@
     <Compile Include="AnaylyzeApi.cs" />
     <Compile Include="CoinAnalyze.cs" />
     <Compile Include="CoinDao.cs" />
+    <Compile Include="Coin\BaseCoin.cs" />
     <Compile Include="Coin\DTA.cs" />
+    <Compile Include="Coin\ELF.cs" />
     <Compile Include="Coin\SMT.cs" />
+    <Compile Include="Coin\VEN.cs" />
     <Compile Include="Coin\XEM.cs" />
     <Compile Include="DataType.cs" />
     <Compile Include="Program.cs" />
