--- a/AutoXX/AutoXX/AutoXX.csproj
+++ b/AutoXX/AutoXX/AutoXX.csproj
@@ -68,11 +68,19 @@
     <Compile Include="CoinAnalyze.cs" />
     <Compile Include="CoinDao.cs" />
     <Compile Include="Coin\BaseCoin.cs" />
+    <Compile Include="Coin\CVC.cs" />
     <Compile Include="Coin\DTA.cs" />
     <Compile Include="Coin\ELF.cs" />
+    <Compile Include="Coin\GNT.cs" />
+    <Compile Include="Coin\HT.cs" />
+    <Compile Include="Coin\LET.cs" />
     <Compile Include="Coin\SMT.cs" />
+    <Compile Include="Coin\SNT.cs" />
+    <Compile Include="Coin\STORJ.cs" />
+    <Compile Include="Coin\THETA.cs" />
     <Compile Include="Coin\VEN.cs" />
     <Compile Include="Coin\XEM.cs" />
+    <Compile Include="Coin\ZIL.cs" />
     <Compile Include="DataType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
