--- a/AutoXX/AutoXX/AutoXX.csproj
+++ b/AutoXX/AutoXX/AutoXX.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Coin\DTA.cs" />
     <Compile Include="Coin\ELF.cs" />
     <Compile Include="Coin\EOS.cs" />
+    <Compile Include="Coin\ETC.cs" />
     <Compile Include="Coin\GNT.cs" />
     <Compile Include="Coin\HSR.cs" />
     <Compile Include="Coin\HT.cs" />
@@ -80,6 +81,7 @@
     <Compile Include="Coin\LET.cs" />
     <Compile Include="Coin\NAS.cs" />
     <Compile Include="Coin\NEO.cs" />
+    <Compile Include="Coin\OMG.cs" />
     <Compile Include="Coin\QTUM.cs" />
     <Compile Include="Coin\RUFF.cs" />
     <Compile Include="Coin\SMT.cs" />
