--- a/AutoXX/AutoXX/AutoXX.csproj
+++ b/AutoXX/AutoXX/AutoXX.csproj
@@ -69,16 +69,21 @@
     <Compile Include="CoinAnalyze.cs" />
     <Compile Include="CoinDao.cs" />
     <Compile Include="Coin\BaseCoin.cs" />
+    <Compile Include="Coin\BCH.cs" />
+    <Compile Include="Coin\BTC.cs" />
     <Compile Include="Coin\CVC.cs" />
+    <Compile Include="Coin\DASH.cs" />
     <Compile Include="Coin\DTA.cs" />
     <Compile Include="Coin\ELF.cs" />
     <Compile Include="Coin\EOS.cs" />
     <Compile Include="Coin\ETC.cs" />
+    <Compile Include="Coin\ETH.cs" />
     <Compile Include="Coin\GNT.cs" />
     <Compile Include="Coin\HSR.cs" />
     <Compile Include="Coin\HT.cs" />
     <Compile Include="Coin\IOST.cs" />
     <Compile Include="Coin\LET.cs" />
+    <Compile Include="Coin\LTC.cs" />
     <Compile Include="Coin\NAS.cs" />
     <Compile Include="Coin\NEO.cs" />
     <Compile Include="Coin\OMG.cs" />
@@ -91,6 +96,7 @@
     <Compile Include="Coin\VEN.cs" />
     <Compile Include="Coin\XEM.cs" />
     <Compile Include="Coin\XRP.cs" />
+    <Compile Include="Coin\ZEC.cs" />
     <Compile Include="Coin\ZIL.cs" />
     <Compile Include="DataType.cs" />
     <Compile Include="Program.cs" />
